<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".view.fragments.DetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tvAnimalName"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/pacifico"
            tools:text="@tools:sample/lorem"/>
        <ImageView
            android:id="@+id/imgAnimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_img_placeholder"
            android:contentDescription="@string/animalImg"
            android:background="@color/white"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tvAnimalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/tvAnimalWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            tools:text="@tools:sample/lorem"/>
        <RadioGroup
            android:id="@+id/rgAnimalGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/radiobutton">
            <RadioButton
                android:id="@+id/rbM"
                android:text="@string/masculino"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/radiobutton"/>
            <RadioButton
                android:id="@+id/rbF"
                android:text="@string/femenino"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/radiobutton"/>
            <RadioButton
                android:id="@+id/rbS"
                android:textColor="@color/white"
                android:text="@string/sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/radiobutton"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>